# qintent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
docs/: PUBLIC_SCOPE.md  api.rst  bridge_qiskit.rst  concepts.rst  conf.py  index.rst  public_scope.rst  quickstart.rst  requirements.txt
docs/integrations/: qintent_bridge_qiskit.md
docs/research/: qldpc_post_decoding_note.md
docs/research/evidence/: qdsv_qldpc_bp_soft_decoder_evidence.json  qdsv_qldpc_bp_soft_decoder_summary.csv  qdsv_qldpc_bp_soft_multiseed_evidence.json  qdsv_qldpc_bp_soft_multiseed_metrics.csv  qdsv_qldpc_bp_soft_multiseed_summary.csv  qdsv_qldpc_five_qubit_stabilizer_logical_evidence.json  qdsv_qldpc_five_qubit_stabilizer_logical_metrics.csv  (+13 more)
examples/: 01_rows_threshold.py  02_rank_top_k.py  03_python_like_domain.py  04_decision_model.py  05_semantic_score_qldpc_style.py  06_structured_semantic_score_qldpc_style.py  quickstart.py
grammar/: QINTENT_PREVIEW.md
notebooks/: qintent_quickstart_colab.ipynb  qintent_vscode_jupyter_test.ipynb  qldpc_batch_decoder_semantic_score_colab.ipynb  qldpc_bp_soft_decoder_reranking_colab.ipynb  qldpc_formal_benchmark_colab.ipynb  qldpc_ibm_hardware_syndrome_validation_colab.ipynb  qldpc_random_sparse_benchmark_colab.ipynb  qldpc_structured_semantic_score_colab.ipynb
src/qintent/: __init__.py  cli.py  client.py  exceptions.py
tests/: test_client.py
(+10 files in other folders)
