[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "qdsv-qintent"
version = "0.1.7"
description = "Lightweight Python client for QIntent, the QDSV-native semantic quantum-intent language."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "QDSV / Qruba" }
]
keywords = ["qintent", "qdsv", "semantic-computation", "quantum", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31",
]

[project.urls]
Homepage = "https://qintent.qdsv.cloud"
Documentation = "https://qintent.qdsv.cloud"
Source = "https://github.com/qdsvquantum-afk/qintent"

[project.scripts]
qintent = "qintent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qintent"]
